photo teaser corrections - caption fixed on mobile

--- a/strona-o-mnie/css/style.scss
+++ b/strona-o-mnie/css/style.scss
@@ -64,7 +64,7 @@ h2,
 h3 {
   font-family: Montserrat, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
-  line-height: 1.6em;
+  //line-height: 1.6em;
 }
 
 h2 {
@@ -286,14 +286,20 @@ nav {
 //  }
 //}
 
+.caption-container {
+  max-width: $max-width;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: flex-start;
+  align-items: center;
+  height: 100%;
+}
+
 .caption {
   font-size: 2rem;
-  position: absolute;
-  top: 50vh;
-  left: 50vw;
   background-color: rgba(255, 255, 255, 0.4);
-  padding: 30px;
-  transform: translateY(-50%);
+  padding: 2%;
 
   h1 {
     color: $kj-blue;
@@ -318,9 +324,14 @@ nav {
 }
 
 @media screen and (max-width: $max-width) {
-  .container {
+  .container, .caption-container {
     padding-left: 2%;
     padding-right: 2%;
+  }
+
+  .caption h1 {
+    margin-top: 0.27em;
+    margin-bottom: 0.27em;
   }
 }
 
